--- a/packages/antx/src/Tabs/index.less
+++ b/packages/antx/src/Tabs/index.less
@@ -1,6 +1,4 @@
-@root-entry-name: 'default';
-@import (reference) '~antd/es/style/themes/index.less';
-
+@ant-prefix: mart;
 @wui-prefix-cls: ~'@{ant-prefix}-wui';
 
 
