--- a/packages/antx/es/Tabs/index.less
+++ b/packages/antx/es/Tabs/index.less
@@ -1,6 +1,4 @@
-@root-entry-name: 'default';
-@import (reference) '~antd/es/style/themes/index.less';
-
+@ant-prefix: mart;
 @wui-prefix-cls: ~'@{ant-prefix}-wui';
 
 
@@ -27,6 +25,7 @@
     text-align: center;
     line-height: 40px;
     padding: 0 10px;
+    background: #fff;
     .@{ant-prefix}-tabs-tab{
       padding: 0;
       background: transparent;
