--- a/packages/antx/src/Tabs/index.less
+++ b/packages/antx/src/Tabs/index.less
@@ -25,6 +25,7 @@
     text-align: center;
     line-height: 40px;
     padding: 0 10px;
+    background: #fff;
     .@{ant-prefix}-tabs-tab{
       padding: 0;
       background: transparent;
